# pi-prune-swe-pruner-provider

./: .gitignore  README.md  SPEC.md  package.json  pyproject.toml  tsconfig.json
examples/: pi-extensions.json
python/src/pi_prune_swe_pruner_provider/: remote_cli.py  remote_server.py
scripts/: install_remote_vast.sh  run_remote_server.sh  start_tunnel.sh
src/: index.test.ts  index.ts  local-input.test.ts  local-input.ts  remote-client.test.ts  remote-client.ts  types.ts
